March 2nd, 2008: Alex Burger <alex_b@users.sourceforge.net>
- Fixed a bug where with handling escaped quotes in a traq message.
  Bug 1748512.  Thanks to Erwin Abrahamse for the fix.

October 12th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Updated snmptt-net-snmp-test to test MIB descriptions.

June 16th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.3beta1

June 16th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.2 for release.
- Fixed a bug where snmpttconvertmib would not recognize a MIB file if the
  DEFINITIONS ::= BEGIN line was split across two lines.  Thanks to Alex 
  Peeters for reporting the bug.  Bug 1678270.
- Improved a previous bug fix for when a TRAP-TYPE / NOTIFICATION-TYPE line 
  was split across two lines.  Fix did not allow the trap name to contain
  a symbol such as a -.

June 9th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Change REGEX to use Text::Balanced instead of split to fix bug with
  REGEX statements that contain captures.

Apr 6th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Release snmptt_1.2beta3

Apr 6th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Add workaround to Net-SNMP 5.4 bug 1638225 where the host name passed
  in the traphandle is <UNKNOWN>.

Mar 4th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Fixed bug where snmptt tried to log to syslog when 
  changing UIDs even if syslog_system_enable was set to 0.
  Thanks to Alex Peeters for reporting the bug.
- The snmptt.pid file is now deleted when SNMPTT exits gracefully.
- When running in daemon mode with a daemon_uid user defined, a
  second (child) process will be started as the daemon_uid user so
  there will be two snmptt processes running.
  The first process will continue to run as the user that ran
  snmptt (usually root), waiting for the child to quit.  After the
  child quits, the parent process will remove the snmptt.pid file 